<?xml version="1.0"?>
<package format="3">
  <name>reaction_wheel_control</name>
  <version>0.0.0</version>
  <description>The reaction_wheel_control package</description>

  <maintainer email="hrithik@todo.todo">hrithik</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>gazebo_dev</build_depend>
  <build_depend>gazebo_ros_pkgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>  <!-- Added this -->

  <build_export_depend>gazebo_dev</build_export_depend>
  <build_export_depend>gazebo_ros_pkgs</build_export_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>  <!-- Added this -->

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>gazebo_ros</depend>

  <exec_depend>gazebo_dev</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>  <!-- Added this -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
